Move logfile name to `files.in`
- The logfile name is needed earlier in the program execution before SW_OUT_read()
- Remove `logfile.log` in outsetup.in and place it in files.in

- Logfile name gains new directory "logs/" to remove it from the outputs
	* This will also be used in future parallelization development

- Update global constants for the number of input and output files
- Open logfile after reading in files.in
	* Create directory if it does not exist already

--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -14,6 +14,7 @@ Input/domain.in
 
 #--- Description of a model run
 Input/modelrun.in	# Input file for model time: start - end years
+logs/logfile.log	# Output file to which warnings, errors, and other important information is written (can also be stdout)
 
 #--- Description of simulated site
 Input/siteparam.in	# Input file for site location, initialization, and miscellaneous model parameters
