Updates to reflect new logfile location
- the logfile is now, by default, logs/logfile.log

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 # Files produced by example run
 /tests/example/Output/*
 /tests/example/Output_*
+/tests/example/logs
+/tests/example/logs*
 /tests/example/Input_nc/domain.nc
 /tests/example/Input_nc/progress.nc
 /tests/example/Input_nc/*/index_*.nc
