CO2-fertilization now reflects year of vegetation inputs
- addressing #328 "Allow biomass inputs as is"

The implemented CO2-fertilization equations and user provided coefficients reflect biomass and water-use efficiency at the time when atmospheric CO2 was 360 ppm (in 1995)

- new user input 'vegYear' that describes the calendar year for which vegetation inputs are valid, i.e., the year when CO2-fertilization has no effect on biomass and water-use efficiency
- SW_CBN_init_run() now calculates the multiplicative CO2-fertilization effect corrected for vegetation input year

- new simulation outputs are similar but not identical because example aCO2 in 1995 is 360.24 (previously it was assumed to be 360 exactly)

--- a/tests/example/Input/veg.in
+++ b/tests/example/Input/veg.in
@@ -131,6 +131,11 @@
 # LAI_conv - monthly amount of biomass needed to produce LAI=1.0 (g/m^2).
 # There should be 12 rows, one for each month, starting with January.
 
+# Calendar year corresponding to vegetation inputs
+# Note: year during which atmospheric CO2 fertilization does not modify
+# biomass inputs and/or water use efficiency (default: 1995 at 360 ppm CO2)
+1995
+
 # Grasslands component:
 #Litter  Biomass  %Live LAI_conv
  75.0    150.0    0.00  300.     # January
