--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -76,8 +76,9 @@
 1
 # Activate (1) / deactivate (0) water-usage efficiency multiplier
 1
-# Name of CO2 scenario: see input file `carbon.in`
-RCP85
+# Name(s) of CO2 scenario: see input file `carbon.in`
+# (use | to concatenate two sets)
+CMIP5_historical|CMIP5_RCP85
 
 
 # --- Soil characterization ---
