Ability to "fix" small inconsistencies in daily weather inputs
- close #457

- New user input to request that specific fixes are applied to daily weather inputs
- SW_WTH_setWeatherValues() gained argument "fixWeatherData" with user-specified flags that apply fixes to the daily weather values

- Currently implement fixes (turned off by default):
** Swap min/max if min > max (air temperature, relative humidity)
** Reset percentages to 100% if they are larger than 100% (relative humidity, cloud cover)
** Reset observed solar radiation to extraterrestrial radiation if the observed value is larger than expected

- tests and ncTestRuns updated to request the fixing of weather input in gridMET, MACA, and Daymet test runs

--- a/tests/example/Input/weathsetup.in
+++ b/tests/example/Input/weathsetup.in
@@ -15,6 +15,13 @@
 7			# Seed random number generator for weather generator (only used if SOILWAT2)
 			# (seed with 0 to use current time)
 
+
+#--- Flags to fix small problems in weather inputs
+0           # Swap min/max if min > max (air temperature, relative humidity)
+0           # Reset percentages to 100% if > 100% (relative humidity, cloud cover)
+0           # Reset observed to extraterrestrial solar radiation if observed > extraterrestrial
+
+
 #--- Flags describing mean monthly climate input usage:
 # 0 = Don't use mean monthly input
 # 1 = Use mean monthly input (climate.in) and override respective flag for daily input, if flags conflict
