Debug udunits2 on macos for simulation-checks.yml

--- a/.github/workflows/simulation-checks.yml
+++ b/.github/workflows/simulation-checks.yml
@@ -44,9 +44,6 @@ jobs:
           run: |
               echo "UD_CFLAGS=-I/opt/homebrew/include" >> "$GITHUB_ENV"
               echo "UD_LIBS=-L/opt/homebrew/lib" >> "$GITHUB_ENV"
-              echo "Debug udunits2 paths on macOS"
-              ls -l /opt/homebrew/include
-              ls -l /opt/homebrew/Cellar/udunits/2.2.28
           
         - name: Prepare environment (windows)
           if: ${{ runner.os == 'Windows' }}
@@ -77,6 +74,12 @@ jobs:
           run: |
               brew update
               brew install netcdf udunits
+              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew"
+              ls -l /opt/homebrew
+              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew/include"
+              ls -l /opt/homebrew/include
+              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew/Cellar"
+              ls -l /opt/homebrew/Cellar
 
         - name: Checkout SOILWAT2 repository and submodules
           uses: actions/checkout@v4
