--- a/.github/workflows/simulation-checks.yml
+++ b/.github/workflows/simulation-checks.yml
@@ -17,7 +17,7 @@ on:
 
 
 jobs:
-    simulation_checks:
+    checks:
 
         runs-on: ${{ matrix.os }}
 
@@ -74,12 +74,6 @@ jobs:
           run: |
               brew update
               brew install netcdf udunits
-              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew"
-              ls -l /opt/homebrew
-              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew/include"
-              ls -l /opt/homebrew/include
-              echo "Debug udunits2 paths on macOS: ls -l /opt/homebrew/Cellar"
-              ls -l /opt/homebrew/Cellar
 
         - name: Checkout SOILWAT2 repository and submodules
           uses: actions/checkout@v4
